[tool.poetry]
name = "repl_python3_Space-apps-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-SocketIO = "^5.1.1"
Flask-SQLAlchemy = "^2.5.1"
Werkzeug = "^2.0.1"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
